--- a/lab09/zad1/api/Dockerfile
+++ b/lab09/zad1/api/Dockerfile
@@ -8,6 +8,8 @@ RUN npm install
 
 COPY . .
 
+RUN apk add --no-cache curl
+
 HEALTHCHECK --interval=10s --timeout=10s --retries=3 \
     CMD curl -f http://localhost:3000/ready || exit 1
 
